--- a/www/html/default.css
+++ b/www/html/default.css
@@ -31,6 +31,10 @@ header h1 {
     border: 1px solid black;
 }
 
+.contents p {
+    text-align: left;
+}
+
 .post {
     margin-top: 1em;
     margin-bottom: 1em;
